[gd_scene load_steps=5 format=3 uid="uid://bcp1wdadt8xag"]

[ext_resource type="Texture2D" uid="uid://dkh231c7x5vm0" path="res://Assets/Sprites/panel-transparent-center-015.png" id="1_fyr2o"]
[ext_resource type="Script" uid="uid://cq0fe2eaq2i87" path="res://Scripts/UI/Alloy/item_input.gd" id="2_03ap4"]
[ext_resource type="PackedScene" uid="uid://b2wbmhb6t7k6" path="res://Scenes/UI/animated_item_texture.tscn" id="3_a16lp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jnhl1"]

[node name="ItemInput" type="TextureRect"]
custom_minimum_size = Vector2(100, 100)
mouse_filter = 2
texture = ExtResource("1_fyr2o")
stretch_mode = 5
script = ExtResource("2_03ap4")

[node name="RemoveButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_jnhl1")
flat = true

[node name="AnimatedItemTexture" parent="." instance=ExtResource("3_a16lp")]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.0
offset_top = -42.0
offset_right = 42.0
offset_bottom = 42.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="pressed" from="RemoveButton" to="." method="_on_remove_button_pressed"]
